{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 11,
  "lineage": "dde43624-ba9f-d999-9d16-b8d3f5713451",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "aks_nsg",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bd8fb8ff-0e7a-4bea-88c2-1a1311814533/resourceGroups/networking-resource-group/providers/Microsoft.Network/networkSecurityGroups/aks-nsg",
            "location": "uksouth",
            "name": "aks-nsg",
            "resource_group_name": "networking-resource-group",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.azurerm_resource_group.networking"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "kube_apiserver_rule",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/bd8fb8ff-0e7a-4bea-88c2-1a1311814533/resourceGroups/networking-resource-group/providers/Microsoft.Network/networkSecurityGroups/aks-nsg/securityRules/kube-apiserver-rule",
            "name": "kube-apiserver-rule",
            "network_security_group_name": "aks-nsg",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "networking-resource-group",
            "source_address_prefix": "86.186.198.193",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.azurerm_network_security_group.aks_nsg",
            "module.networking.azurerm_resource_group.networking"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh_rule",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/bd8fb8ff-0e7a-4bea-88c2-1a1311814533/resourceGroups/networking-resource-group/providers/Microsoft.Network/networkSecurityGroups/aks-nsg/securityRules/ssh-rule",
            "name": "ssh-rule",
            "network_security_group_name": "aks-nsg",
            "priority": 1002,
            "protocol": "Tcp",
            "resource_group_name": "networking-resource-group",
            "source_address_prefix": "86.186.198.193",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.azurerm_network_security_group.aks_nsg",
            "module.networking.azurerm_resource_group.networking"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "control_plane_subnet",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/bd8fb8ff-0e7a-4bea-88c2-1a1311814533/resourceGroups/networking-resource-group/providers/Microsoft.Network/virtualNetworks/aks-vnet/subnets/control-plane-subnet",
            "name": "control-plane-subnet",
            "resource_group_name": "networking-resource-group",
            "virtual_network_name": "aks-vnet"
          },
          "dependencies": [
            "module.networking.azurerm_resource_group.networking",
            "module.networking.azurerm_virtual_network.aks_vnet"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "aks_vnet",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "28710b7d-0b92-45c9-b69b-9c4d3402e56c",
            "id": "/subscriptions/bd8fb8ff-0e7a-4bea-88c2-1a1311814533/resourceGroups/networking-resource-group/providers/Microsoft.Network/virtualNetworks/aks-vnet",
            "location": "uksouth",
            "name": "aks-vnet",
            "resource_group_name": "networking-resource-group"
          },
          "dependencies": [
            "module.networking.azurerm_resource_group.networking"
          ]
        }
      ]
    }
  ]
}